package edu.fiuba.algo3.modelo;

import java.util.List;

public class Desierto extends Terreno {
	
	@Override
	public void repartirRecurso(List<Pieza> edificios) {
	    System.out.print("El desierto no reparte recursos");
	}

}
